--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
+@import url("https://fonts.googleapis.com/css2?family=Hind+Siliguri&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap");
+* {
+  box-sizing: border-box;
+}
+body {
+  font-family: "Helvetica Neue", sans-serif;
+}
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.block-calc {
+  user-select: none;
+  width: 250px;
+  /* height: 550px; */
+  background: #1c1c1c;
+  margin: 20px auto 0px;
+  padding: 20px 0px 0px;
+  color: #fff;
+  /* border-radius: 20px; */
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.row {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-evenly;
+  margin-bottom: 10px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* .block-calc-val {
+   width: 85%;
+   height: 100px;
+   display: flex;
+   align-items: flex-end;
+   justify-content: flex-end;
+   overflow: hidden;
+   font-size: 55px;
+} */
